# ynab-api

./: .gitignore  Dockerfile.superset  Justfile  README.md  docker-entrypoint.sh  get_transactions.py  pyproject.toml
dags/: README.md  ynab_dag.py  ynab_transactions_dag.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/analytical/: card_usage.sql  income.sql  next_projected_date.sql  schema.yml  spend.sql  transaction_frequency.sql  transactions.sql  utilities.sql
dbt/models/reporting/: rpt_income.sql  rpt_savings.sql  rpt_spend.sql  rpt_weekly_spend.sql  schema.yml
dbt/models/staging/: schema.yml  stg_ynab_transactions.sql
slack_bot/: README.md  __init__.py  app.py  claude.py  config.py  db.py  weekly_summary.py
